@@ -7,82 +7,90 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-PYTHON_PACKAGE_DIR=$(shell python -c "import distutils.sysconfig;print distutils.sysconfig.get_python_lib(True) ")
-
-
 %:
 	dh  $@
 
-install_libsmdev:
-	# Set up libsmdev package directories and files
-	mkdir -p debian/libsmdev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so.*.*.* debian/libsmdev/usr/lib
-
-install_libsmdev_dev:
-	# Set up libsmdev-dev package directories and files
-	mkdir -p debian/libsmdev-dev/usr/include
-	mkdir -p debian/libsmdev-dev/usr/include/libsmdev
-	mkdir -p debian/libsmdev-dev/usr/lib
-	mkdir -p debian/libsmdev-dev/usr/lib/pkgconfig
-	mkdir -p debian/libsmdev-dev/usr/share/man/man3
-	install -p -m755 debian/tmp/usr/include/*.h debian/libsmdev-dev/usr/include
-	install -p -m755 debian/tmp/usr/include/libsmdev/*.h debian/libsmdev-dev/usr/include/libsmdev
-	install -p -m755 debian/tmp/usr/lib/*.la debian/libsmdev-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.a debian/libsmdev-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so debian/libsmdev-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/pkgconfig/* debian/libsmdev-dev/usr/lib/pkgconfig
-	install -p -m755 debian/tmp/usr/share/man/man3/* debian/libsmdev-dev/usr/share/man/man3
-
-install_libsmdev_tools:
-	# Set up libsmdev-tools package directories and files
-	mkdir -p debian/libsmdev-tools/usr/bin
-	mkdir -p debian/libsmdev-tools/usr/share/man/man1
-	install -p -m755 debian/tmp/usr/bin/* debian/libsmdev-tools/usr/bin
-	install -p -m755 debian/tmp/usr/share/man/man1/* debian/libsmdev-tools/usr/share/man/man1
-
-install_libsmdev_python:
-	# Set up libsmdev-python package directories and files
-	mkdir -p debian/libsmdev-python/$(PYTHON_PACKAGE_DIR)
-	install -p -m775 debian/tmp$(PYTHON_PACKAGE_DIR)/pysmdev.* debian/libsmdev-python$(PYTHON_PACKAGE_DIR)
-
+.PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-python
+	dh_auto_configure -- --enable-python CFLAGS="-g"
 
+.PHONY: override_dh_auto_test
 override_dh_auto_test:
 
-override_dh_installinit: install_libsmdev install_libsmdev_dev install_libsmdev_tools install_libsmdev_python
+.PHONY: override_dh_install
+override_dh_install:
+	# Create the libsmdev package.
+	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p libsmdev
+	# Create the libsmdev-dev package.
+	dh_install "debian/tmp/usr/include/*.h" -p libsmdev-dev
+	dh_install "debian/tmp/usr/include/lib*/*.h" -p libsmdev-dev
+	dh_install "debian/tmp/usr/lib/*.a" -p libsmdev-dev
+	dh_install "debian/tmp/usr/lib/*.la" -p libsmdev-dev
+	dh_install "debian/tmp/usr/lib/*.so" -p libsmdev-dev
+	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p libsmdev-dev
+	dh_install "debian/tmp/usr/share/man/man3/*" -p libsmdev-dev
+	# Create the libsmdev-tools package.
+	dh_install "debian/tmp/usr/bin/*" -p libsmdev-tools
+	dh_install "debian/tmp/usr/share/man/man1/*" -p libsmdev-tools
+	# Create the libsmdev-python package.
+	dh_install -X"*_d.so" "debian/tmp/usr/lib/python*/*" -p libsmdev-python
+	# The libsmdev-dbg and libsmdev-python-dbg packages are created by dh_strip.
+	dh_install
 
+.PHONY: override_dh_installmenu
 override_dh_installmenu:
 
+.PHONY: override_dh_installmime
 override_dh_installmime:
 
+.PHONY: override_dh_installmodules
 override_dh_installmodules:
 
+.PHONY: override_dh_installlogcheck
 override_dh_installlogcheck:
 
+.PHONY: override_dh_installlogrotate
 override_dh_installlogrotate:
 
+.PHONY: override_dh_installpam
 override_dh_installpam:
 
+.PHONY: override_dh_installppp
 override_dh_installppp:
 
+.PHONY: override_dh_installudev
 override_dh_installudev:
 
+.PHONY: override_dh_installwm
 override_dh_installwm:
 
+.PHONY: override_dh_installxfonts
 override_dh_installxfonts:
 
+.PHONY: override_dh_gconf
 override_dh_gconf:
 
+.PHONY: override_dh_icons
 override_dh_icons:
 
+.PHONY: override_dh_perl
 override_dh_perl:
 
+.PHONY: override_dh_pysupport
 override_dh_pysupport:
 
+.PHONY: override_dh_strip
+override_dh_strip:
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	dh_strip -plibsmdev --dbg-package=libsmdev-dbg
+	dh_strip -plibsmdev-python --dbg-package=libsmdev-python-dbg
+endif
+
+.PHONY: override_dh_shlibdeps
 override_dh_shlibdeps:
 	dh_shlibdeps -Llibsmdev -l${PWD}/debian/tmp/usr/lib
 
+.PHONY: override_dh_makeshlibs
 override_dh_makeshlibs:
 	dh_makeshlibs -Xlibsmdev-dev
 
