@@ -1,21 +1,25 @@
 dnl Functions for Python bindings
 dnl
-dnl Version: 20140529
+dnl Version: 20140622
 
 dnl Function to check if the python binary is available
 dnl "python python# python#.#"
 AC_DEFUN([AX_PROG_PYTHON],
- [AC_CHECK_PROGS(
+ [AS_IF(
+  [test "x${PYTHON_VERSION}" != x],
+  [ax_python_progs="python${PYTHON_VERSION}"],
+  [ax_python_progs="python python2 python2.7 python2.6 python2.5 python3 python3.4 python3.3 python3.2 python3.1 python3.0"])
+ AC_CHECK_PROGS(
   [PYTHON],
-  [python python2 python3 python3.2 python3.1 python3.0 python2.7 python2.6 python2.5])
+  [$ax_python_progs])
  AS_IF(
-  [test x"$PYTHON" != x],
-  [ax_prog_python_version=`$PYTHON -c "import sys; sys.stdout.write(sys.version[[:3]])" 2>/dev/null`;
+  [test "x${PYTHON}" != x],
+  [ax_prog_python_version=`${PYTHON} -c "import sys; sys.stdout.write(sys.version[[:3]])" 2>/dev/null`;
   AC_SUBST(
    [PYTHON_VERSION],
    [$ax_prog_python_version])
 
-  ax_prog_python_platform=`$PYTHON -c "import sys; sys.stdout.write(sys.platform)" 2>/dev/null`;
+  ax_prog_python_platform=`${PYTHON} -c "import sys; sys.stdout.write(sys.platform)" 2>/dev/null`;
   AC_SUBST(
    [PYTHON_PLATFORM],
    [$ax_prog_python_platform])
@@ -29,16 +33,16 @@ AC_DEFUN([AX_PROG_PYTHON],
  ])
 
 dnl Function to check if the python-config binary is available
-dnl "python$PYTHON_VERSION-config python-config"
+dnl "python${PYTHON_VERSION}-config python-config"
 AC_DEFUN([AX_PROG_PYTHON_CONFIG],
  [AS_IF(
-  [test x"$PYTHON" != x],
+  [test "x${PYTHON}" != x],
   [AC_CHECK_PROGS(
    [PYTHON_CONFIG],
-   [python$PYTHON_VERSION-config python-config])
+   [python${PYTHON_VERSION}-config python-config])
   ])
  AS_IF(
-  [test x"$PYTHON_CONFIG" = x],
+  [test "x${PYTHON_CONFIG}" = x],
   [AC_MSG_ERROR(
    [Unable to find python-config])
   ])
@@ -53,9 +57,9 @@ AC_DEFUN([AX_PYTHON_CHECK],
  AX_PROG_PYTHON_CONFIG
 
  AS_IF(
-  [test x"$PYTHON_CONFIG" != x],
+  [test "x${PYTHON_CONFIG}" != x],
   [dnl Check for Python includes
-  PYTHON_INCLUDES=`$PYTHON_CONFIG --includes 2>/dev/null`;
+  PYTHON_INCLUDES=`${PYTHON_CONFIG} --includes 2>/dev/null`;
 
   AC_MSG_CHECKING(
    [for Python includes])
@@ -63,7 +67,7 @@ AC_DEFUN([AX_PYTHON_CHECK],
    [$PYTHON_INCLUDES])
 
   dnl Check for Python libraries
-  PYTHON_LDFLAGS=`$PYTHON_CONFIG --ldflags 2>/dev/null`;
+  PYTHON_LDFLAGS=`${PYTHON_CONFIG} --ldflags 2>/dev/null`;
 
   AC_MSG_CHECKING(
    [for Python libraries])
@@ -71,19 +75,19 @@ AC_DEFUN([AX_PYTHON_CHECK],
    [$PYTHON_LDFLAGS])
 
   dnl Check for the existence of Python.h
-  BACKUP_CPPFLAGS="$CPPFLAGS"
-  CPPFLAGS="$CPPFLAGS $PYTHON_INCLUDES"
+  BACKUP_CPPFLAGS="${CPPFLAGS}"
+  CPPFLAGS="${CPPFLAGS} ${PYTHON_INCLUDES}"
 
   AC_CHECK_HEADERS(
    [Python.h],
    [ac_cv_header_python_h=yes],
    [ac_cv_header_python_h=no])
 
-  CPPFLAGS="$BACKUP_CPPFLAGS"
+  CPPFLAGS="${BACKUP_CPPFLAGS}"
  ])
 
  AS_IF(
-  [test x"$ac_cv_header_python_h" != xyes],
+  [test "x${ac_cv_header_python_h}" != xyes],
   [ac_cv_enable_python=no],
   [ac_cv_enable_python=$PYTHON_VERSION
   AC_SUBST(
@@ -96,9 +100,9 @@ AC_DEFUN([AX_PYTHON_CHECK],
 
   dnl Check for Python prefix
   AS_IF(
-   [test "x$ac_cv_with_pyprefix" = x || test "x$ac_cv_with_pyprefix" = xno],
+   [test "x${ac_cv_with_pyprefix}" = x || test "x${ac_cv_with_pyprefix}" = xno],
    [ax_python_prefix="\${prefix}"],
-   [ax_python_prefix=`$PYTHON_CONFIG --prefix 2>/dev/null`])
+   [ax_python_prefix=`${PYTHON_CONFIG} --prefix 2>/dev/null`])
 
   AC_SUBST(
    [PYTHON_PREFIX],
@@ -106,23 +110,23 @@ AC_DEFUN([AX_PYTHON_CHECK],
 
   dnl Check for Python exec-prefix
   AS_IF(
-   [test "x$ac_cv_with_pyprefix" = x || test "x$ac_cv_with_pyprefix" = xno],
+   [test "x${ac_cv_with_pyprefix}" = x || test "x${ac_cv_with_pyprefix}" = xno],
    [ax_python_exec_prefix="\${exec_prefix}"],
-   [ax_python_exec_prefix=`$PYTHON_CONFIG --exec-prefix 2>/dev/null`])
+   [ax_python_exec_prefix=`${PYTHON_CONFIG} --exec-prefix 2>/dev/null`])
 
   AC_SUBST(
    [PYTHON_EXEC_PREFIX],
    [$ax_python_exec_prefix])
 
   dnl Check for Python library directory
-  ax_python_pythondir_suffix=`$PYTHON -c "import sys; import distutils.sysconfig; sys.stdout.write(distutils.sysconfig.get_python_lib(0, 0, prefix=''))" 2>/dev/null`;
+  ax_python_pythondir_suffix=`${PYTHON} -c "import sys; import distutils.sysconfig; sys.stdout.write(distutils.sysconfig.get_python_lib(0, 0, prefix=''))" 2>/dev/null`;
 
   AS_IF(
-   [test "x$ac_cv_with_pythondir" = x || test "x$ac_cv_with_pythondir" = xno],
+   [test "x${ac_cv_with_pythondir}" = x || test "x${ac_cv_with_pythondir}" = xno],
    [AS_IF(
-    [test "x$ac_cv_with_pyprefix" = x || test "x$ac_cv_with_pyprefix" = xno],
-    [ax_python_pythondir="$ax_python_prefix/$ax_python_pythondir_suffix"],
-    [ax_python_pythondir=`$PYTHON -c "import distutils.sysconfig; print distutils.sysconfig.get_python_lib() " 2>/dev/null`])],
+    [test "x${ac_cv_with_pyprefix}" = x || test "x${ac_cv_with_pyprefix}" = xno],
+    [ax_python_pythondir="${ax_python_prefix}/${ax_python_pythondir_suffix}"],
+    [ax_python_pythondir=`${PYTHON} -c "import distutils.sysconfig; print distutils.sysconfig.get_python_lib() " 2>/dev/null`])],
    [ax_python_pythondir=$ac_cv_with_pythondir])
 
   AC_SUBST(
@@ -130,12 +134,12 @@ AC_DEFUN([AX_PYTHON_CHECK],
    [$ax_python_pythondir])
 
   dnl Check for Python platform specific library directory
-  ax_python_pyexecdir_suffix=`$PYTHON -c "import sys; import distutils.sysconfig; sys.stdout.write(distutils.sysconfig.get_python_lib(1, 0, prefix=''))" 2>/dev/null`;
-  ax_python_library_dir=`$PYTHON -c "import distutils.sysconfig; print distutils.sysconfig.get_python_lib(True) " 2>/dev/null`;
+  ax_python_pyexecdir_suffix=`${PYTHON} -c "import sys; import distutils.sysconfig; sys.stdout.write(distutils.sysconfig.get_python_lib(1, 0, prefix=''))" 2>/dev/null`;
+  ax_python_library_dir=`${PYTHON} -c "import distutils.sysconfig; print distutils.sysconfig.get_python_lib(True) " 2>/dev/null`;
 
   AS_IF(
-   [test "x$ac_cv_with_pyprefix" = x || test "x$ac_cv_with_pyprefix" = xno],
-   [ax_python_pyexecdir="$ax_python_exec_prefix/$ax_python_pyexecdir_suffix"],
+   [test "x${ac_cv_with_pyprefix}" = x || test "x${ac_cv_with_pyprefix}" = xno],
+   [ax_python_pyexecdir="${ax_python_exec_prefix}/${ax_python_pyexecdir_suffix}"],
    [ax_python_pyexecdir=$ax_python_library_dir])
 
   AC_SUBST(
@@ -174,11 +178,11 @@ AC_DEFUN([AX_PYTHON_CHECK_ENABLE],
   [no])
 
  AS_IF(
-  [test "x$ac_cv_enable_python" != xno],
+  [test "x${ac_cv_enable_python}" != xno],
   [AX_PYTHON_CHECK])
 
  AS_IF(
-  [test "x$ac_cv_enable_python" != xno],
+  [test "x${ac_cv_enable_python}" != xno],
   [AC_DEFINE(
    [HAVE_PYTHON],
    [1],
@@ -187,6 +191,6 @@ AC_DEFUN([AX_PYTHON_CHECK_ENABLE],
 
  AM_CONDITIONAL(
   HAVE_PYTHON,
-  [test "x$ac_cv_enable_python" != xno])
+  [test "x${ac_cv_enable_python}" != xno])
 ])
 
